<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="608dp"
        android:onClick="navegar"
        android:text="@string/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:singleLine="false"
        android:text="@string/navegacion"
        android:textColorHint="#03A9F4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_mail"
        android:layout_width="211dp"
        android:layout_height="76dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="48dp"
        android:onClick="navegation"
        android:text="@string/visita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mail" />
</androidx.constraintlayout.widget.ConstraintLayout>