<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="306dp"
        android:layout_height="134dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="68dp"
        android:onClick="Regresar"
        android:text="@string/btn_2"
        app:icon="@drawable/regreso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="124dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:onClick="navegar"
        android:text="@string/navegacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="163dp"
        android:layout_height="57dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="236dp"
        android:text="@string/ope1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="177dp"
        android:layout_height="61dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="32dp"
        android:onClick="ops"
        android:text="@string/g_basico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

</androidx.constraintlayout.widget.ConstraintLayout>