<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="286dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
         android:background="@drawable/custon_imput"
        android:layout_marginTop="36dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:drawableStart="@drawable/custon_usuario"
        android:hint="@string/usuario"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/text_pass"
        android:layout_width="291dp"
        android:background="@drawable/custon_imput"
        android:drawablePadding="12dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/pass"
        android:drawableStart="@drawable/custon_contrasena"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="52dp"
        android:onClick="Registar"
        android:text="@string/btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pass" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="181dp"
        android:layout_height="148dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="328dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/titulo1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="118dp"
        android:layout_height="17dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:text="@string/titulo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>